// Vitest Snapshot v1

exports[`analyze() 1`] = `
{
  "chords": {
    "chordRangeCount": 4,
    "chordRanges": [
      {
        "chords": [],
        "distribution": {
          "ticks": {
            "A": 369,
            "B": 15,
            "C": 123,
            "D": 49,
            "E": 175,
            "G": 144,
          },
        },
        "durationTicks": 480,
        "notes": Set {
          "G",
          "A",
          "E",
          "C",
          "D",
          "B",
        },
        "startTicks": 0,
        "uniqueNotes": [],
        "unit": "beat",
        "unitNumber": 0,
      },
      {
        "chords": [],
        "distribution": {
          "ticks": {
            "A": 302,
            "B": 82,
            "C": 232,
            "D": 55,
            "E": 130,
            "G": 41,
          },
        },
        "durationTicks": 480,
        "notes": Set {
          "A",
          "E",
          "C",
          "G",
          "B",
          "D",
        },
        "startTicks": 480,
        "uniqueNotes": [],
        "unit": "beat",
        "unitNumber": 1,
      },
      {
        "chords": [],
        "distribution": {
          "ticks": {
            "A": 159,
            "C": 85,
            "D": 19,
            "E": 217,
            "G": 137,
          },
        },
        "durationTicks": 480,
        "notes": Set {
          "G",
          "E",
          "A",
          "C",
          "D",
        },
        "startTicks": 960,
        "uniqueNotes": [],
        "unit": "beat",
        "unitNumber": 2,
      },
      {
        "chords": [],
        "distribution": {
          "ticks": {
            "A": 197,
            "B": 167,
            "C": 310,
            "D": 200,
            "E": 47,
            "G": 104,
          },
        },
        "durationTicks": 480,
        "notes": Set {
          "E",
          "A",
          "C",
          "D",
          "G",
          "B",
        },
        "startTicks": 1440,
        "uniqueNotes": [],
        "unit": "beat",
        "unitNumber": 3,
      },
      {
        "chords": [],
        "distribution": {
          "ticks": {
            "E": 3,
          },
        },
        "durationTicks": 480,
        "notes": Set {
          "E",
        },
        "startTicks": 1920,
        "uniqueNotes": [],
        "unit": "beat",
        "unitNumber": 4,
      },
    ],
    "ticksPerChordRange": 480,
    "unit": "beat",
  },
  "notes": {
    "duration": {
      "A": 1027,
      "B": 264,
      "C": 750,
      "D": 323,
      "E": 572,
      "G": 426,
    },
    "frequency": {
      "A": 10,
      "B": 2,
      "C": 2,
      "D": 5,
      "E": 3,
      "G": 4,
    },
    "presence": {
      "A": 1,
      "B": 0.2438918433076174,
      "C": 0.6079095198861508,
      "D": 0.3573140588719945,
      "E": 0.4976630963972735,
      "G": 0.41138491498764135,
    },
  },
}
`;

exports[`chord detection 1`] = `
[
  {
    "chordNotes": Set {
      "G",
      "A",
      "E",
      "C",
      "D",
    },
    "chords": [
      "C6/9/G",
      "D11/G",
      "D9sus4/G",
      "Am7add11/G",
    ],
    "distribution": {
      "ticks": {
        "A": 369,
        "B": 15,
        "C": 123,
        "D": 49,
        "E": 175,
        "G": 144,
      },
      "time": {
        "A": 0.76875,
        "B": 0.03125,
        "C": 0.25625,
        "D": 0.10208333333333333,
        "E": 0.3645833333333333,
        "G": 0.3,
      },
    },
    "durationTicks": 480,
    "notes": Set {
      "G",
      "A",
      "E",
      "C",
      "D",
      "B",
    },
    "startTicks": 0,
    "uniqueNotes": [],
    "unit": "beat",
    "unitNumber": 0,
  },
  {
    "chordNotes": Set {
      "A",
      "E",
      "C",
      "B",
      "D",
    },
    "chords": [],
    "distribution": {
      "ticks": {
        "A": 302,
        "B": 82,
        "C": 232,
        "D": 55,
        "E": 130,
        "G": 41,
      },
      "time": {
        "A": 0.6291666666666667,
        "B": 0.17083333333333334,
        "C": 0.48333333333333334,
        "D": 0.11458333333333333,
        "E": 0.2708333333333333,
        "G": 0.08541666666666667,
      },
    },
    "durationTicks": 480,
    "notes": Set {
      "A",
      "E",
      "C",
      "G",
      "B",
      "D",
    },
    "startTicks": 480,
    "uniqueNotes": [],
    "unit": "beat",
    "unitNumber": 1,
  },
  {
    "chordNotes": Set {
      "G",
      "E",
      "A",
      "C",
    },
    "chords": [
      "C6/G",
      "Am7/G",
    ],
    "distribution": {
      "ticks": {
        "A": 159,
        "C": 85,
        "D": 19,
        "E": 217,
        "G": 137,
      },
      "time": {
        "A": 0.33125,
        "C": 0.17708333333333334,
        "D": 0.03958333333333333,
        "E": 0.45208333333333334,
        "G": 0.28541666666666665,
      },
    },
    "durationTicks": 480,
    "notes": Set {
      "G",
      "E",
      "A",
      "C",
      "D",
    },
    "startTicks": 960,
    "uniqueNotes": [],
    "unit": "beat",
    "unitNumber": 2,
  },
  {
    "chordNotes": Set {
      "A",
      "C",
      "D",
      "G",
      "B",
    },
    "chords": [],
    "distribution": {
      "ticks": {
        "A": 197,
        "B": 167,
        "C": 310,
        "D": 200,
        "E": 47,
        "G": 104,
      },
      "time": {
        "A": 0.41041666666666665,
        "B": 0.34791666666666665,
        "C": 0.6458333333333334,
        "D": 0.4166666666666667,
        "E": 0.09791666666666667,
        "G": 0.21666666666666667,
      },
    },
    "durationTicks": 480,
    "notes": Set {
      "E",
      "A",
      "C",
      "D",
      "G",
      "B",
    },
    "startTicks": 1440,
    "uniqueNotes": [],
    "unit": "beat",
    "unitNumber": 3,
  },
  {
    "chordNotes": Set {},
    "chords": [],
    "distribution": {
      "ticks": {
        "E": 3,
      },
      "time": {
        "E": 0.00625,
      },
    },
    "durationTicks": 480,
    "notes": Set {
      "E",
    },
    "startTicks": 1920,
    "uniqueNotes": [],
    "unit": "beat",
    "unitNumber": 4,
  },
]
`;

exports[`parseMidi() should parse to a known format 1`] = `
{
  "timeSignature": {
    "denominator": 4,
    "numerator": 4,
  },
  "timings": {
    "durationTicks": 479,
    "microsecondsPerBeat": 517241,
    "ticksPerBeat": 480,
  },
  "tracks": [
    {
      "durationTicks": 479,
      "name": "Pianoteq",
      "notes": [
        {
          "durationTicks": 35,
          "noteName": [
            "A",
            "A",
          ],
          "noteNameWithOctave": [
            "A3",
            "A3",
          ],
          "noteNumber": 57,
          "startTicks": 39,
          "uuid": "removed",
        },
        {
          "durationTicks": 55,
          "noteName": [
            "D",
            "D",
          ],
          "noteNameWithOctave": [
            "D4",
            "D4",
          ],
          "noteNumber": 62,
          "startTicks": 177,
          "uuid": "removed",
        },
        {
          "durationTicks": 43,
          "noteName": [
            "Bb",
            "A#",
          ],
          "noteNameWithOctave": [
            "Bb3",
            "A#3",
          ],
          "noteNumber": 58,
          "startTicks": 273,
          "uuid": "removed",
        },
        {
          "durationTicks": 34,
          "noteName": [
            "A",
            "A",
          ],
          "noteNameWithOctave": [
            "A2",
            "A2",
          ],
          "noteNumber": 45,
          "startTicks": 393,
          "uuid": "removed",
        },
        {
          "durationTicks": 18,
          "noteName": [
            "G",
            "G",
          ],
          "noteNameWithOctave": [
            "G4",
            "G4",
          ],
          "noteNumber": 67,
          "startTicks": 479,
          "uuid": "removed",
        },
      ],
    },
  ],
}
`;
